--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <footer class="footer">
       <div class="container">
         <p class="text-muted">
-          Leap years table task.
+          Leap years table task. (Simplicity is Everything).
         </p>
       </div>
     </footer>
